apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lonctus
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kaljo14/my-map:latest@sha256:966609e0e010ce7f83e726af814a38e92aa9100195298c5ff4640f0a37ec4f11
          ports:
            - name: http
              containerPort: 80 # Adjust if your app listens on 3000 or 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lonctus
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 # Must match containerPort
      protocol: TCP
      name: http
  selector:
    app: frontend
