apps/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80 # Must match containerPort
    protocol: TCP
    name: http
  selector:
    app: frontend
